--- a/html/results-admin.html
+++ b/html/results-admin.html
@@ -122,22 +122,9 @@
                     <span class="text-2xl text-dark-yellow"><b>RESULTADOS</b></span>
                     <span><b>OBSERVAÇÕES IMPORTANTES:</b></span>
                     <div class="pt-1 align-right margin-top-60-negative">
-                        <label for="selectDecisionsFilter"><b>EXIBIR:</b></label>
-                        <select id="selectDecisionsFilter" class="form-select-lg">
-                            <option value="1">TUDO</option>
-                            <option value="2">DECIDIDOS</option>
-                            <option value="3">NÃO DECIDIDOS</option>
-                        </select>
-                        <button id="btApplyFilter" class="btn btn-outline-white align-baseline"
-                                data-toggle="tooltip" title="Aplicar Filtro">APLICAR
-                        </button>
+                        <br/>&nbsp;
                     </div>
                     <br/>
-                    <div class="d-flex">
-                        <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de EMPATE no topo do ranking, é possível SEGURAR E ARRASTAR
-                            as opções para reordená-las. </p>
-                    </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
                         <p class="mb-0 text-sm"> Uma PONTUAÇÃO DE MOTIVAÇÃO/ENGAJAMENTO a partir de 60 pontos e uma CONCORDÂNCIA a partir de 65% são
@@ -145,7 +132,11 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de PONTUAÇÕES BAIXAS, podem ser efetuadas nOVAS RODADAS DE
+                        <p class="mb-0 text-sm"> Os itens considerados BONS PARA SEREM ACEITOS estão em <span class="text-yellow">AMARELO</span> ou <span class="text-green">VERDE</span>. </p>
+                    </div>
+                    <div class="d-flex">
+                        <i class="material-icons text-sm my-auto me-1">info</i>
+                        <p class="mb-0 text-sm"> Em caso de PONTUAÇÕES BAIXAS, podem ser efetuadas NOVAS RODADAS DE
                             AVALIAÇÕES pelos usuários, ou pode-se fazer uma ESCOLHA PERSONALIZADA. </p>
                     </div>
                     <div class="d-flex">
@@ -163,11 +154,6 @@
                         <p class="mb-0 text-sm"> Decisões com PENDÊNCIAS, ou seja, aquelas com avaliações incompletas / não iniciadas, não terão formação de ranking, ou não estarão com todas as opções disponíveis. Confira as
                             pendências na DASHBOARD.
                         </p>
-                    </div>
-                    <div class="d-flex">
-                        <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Antes de tomar uma decisão, certifique-se de CHECAR O IMPACTO da mesma
-                            em cada participante. Basta CLICAR na opção desejada. </p>
                     </div>
                 </div>
             </div>
@@ -274,7 +260,7 @@
 <script src="/js/jinplace.js"></script>
 <script src="/js/loadingoverlay.min.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/results.js"></script>
+<script src="/js/results-admin.js"></script>
 </body>
 
 </html>
