--- a/html/results.html
+++ b/html/results.html
@@ -154,7 +154,11 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Em caso de PONTUAÇÕES BAIXAS, podem ser efetuadas nOVAS RODADAS DE
+                        <p class="mb-0 text-sm"> Os itens considerados BONS PARA SEREM ACEITOS estão em <span class="text-yellow">AMARELO</span> ou <span class="text-green">VERDE</span>. </p>
+                    </div>
+                    <div class="d-flex">
+                        <i class="material-icons text-sm my-auto me-1">info</i>
+                        <p class="mb-0 text-sm"> Em caso de PONTUAÇÕES BAIXAS, podem ser efetuadas NOVAS RODADAS DE
                             AVALIAÇÕES pelos usuários, ou pode-se fazer uma ESCOLHA PERSONALIZADA. </p>
                     </div>
                     <div class="d-flex">
