--- a/html/admin.html
+++ b/html/admin.html
@@ -65,7 +65,7 @@
                     <span class="nav-link-text ms-1">Dashboard</span>
                 </a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item" id="buttonResults">
                 <a class="nav-link text-white " href="/project/results">
                     <div class="text-white text-center me-2 d-flex align-items-center justify-content-center">
                         <i class="material-icons opacity-10">military_tech</i>
