--- a/html/admin.html
+++ b/html/admin.html
@@ -472,27 +472,44 @@
         <div id="divPopups">
             <div class="card modal modal-chart" id="divChartsComparison">
                 <br/>
-                <span class="margin-left-50"><b>SELECIONE OS DADOS PARA GERAÇÃO DOS GRÁFICOS:</b></span>
+                <span class="margin-left-50 text-yellow"><b>SELECIONE OS DADOS PARA GERAÇÃO DOS GRÁFICOS:</b></span>
                 <br/>
                 <br/>
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-sm">
+                            <b>ITEM 1:</b>
                             <select id="selectChart1Content" class="select-chart"></select>
                         </div>
                         <div class="col-sm">
+                            <b>ITEM 2:</b>
                             <select id="selectChart2Content" class="select-chart"></select>
                         </div>
+                        <br/>
+                    </div>
+                    <div class="row">
+                        <br/>
+                    </div>
+                    <div class="row">
+                        <b class="text-yellow">GRÁFICOS:</b>
+                    </div>
+                    <div class="row">
+                        <br/>
                     </div>
                     <div class="row">
                         <div class="col-sm">
+                            <b>&nbsp;E-V-C</b>
                             <div id="customRadarChartDiv" class="radar-chart-custom"></div>
                         </div>
                         <div class="col-sm">
+                            <b>&nbsp;EVC</b>
                             <div id="customGaugeChartDiv" class="radar-chart-custom"></div>
                         </div>
                     </div>
-                    <button id="btShowCustomChart" type="button" class="btn bg-gradient-light w-100 my-4 mb-2">EXIBIR
+                    <div class="row">
+                        <br/>
+                    </div>
+                    <button id="btShowCustomChart" type="button" class="btn bg-gradient-light w-100 my-4 mb-2">COMPARAR
                     </button>
                 </div>
             </div>
