--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -176,11 +176,11 @@
                         </div>
                         <div class="d-flex">
                             <i class="material-icons text-sm my-auto me-1">info</i>
-                            <p class="mb-0 text-sm"> Clique com o botão DIREITO do MOUSE para opção de REMOÇÃO. </p>
+                            <p class="mb-0 text-sm"> Clique com o BOTÃO DIREITO DO MOUSE para opção de REMOÇÃO. </p>
                         </div>
                         <div class="d-flex">
                             <i class="material-icons text-sm my-auto me-1">info</i>
-                            <p class="mb-0 text-sm"> Para evitar problemas de sincronização do projeto, é importante que APENAS UM usuário modifique as configurações do projeto por vez. </p>
+                            <p class="mb-0 text-sm"> Para evitar problemas de sincronização do projeto, é importante que APENAS UM USUÁRIO modifique as configurações do projeto por vez. </p>
                         </div>
                     </div>
                 </div>
