--- a/html/admin.html
+++ b/html/admin.html
@@ -412,10 +412,10 @@
                                 <table class="table align-items-center mb-0 border-white border-line">
                                     <thead>
                                     <tr class="light-silver">
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                        <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
                                             Membro
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                        <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
                                             Pendências
                                         </th>
                                     </tr>
