--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -441,10 +441,10 @@
                                        data-toggle="tooltip" title="Clique para sanar as suas pendências, caso existam!">
                                     <thead>
                                     <tr class="light-silver">
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                        <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
                                             Membro
                                         </th>
-                                        <th class="text-uppercase text-secondary text-xxs font-weight-bolder opacity-7 ps-2">
+                                        <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
                                             Pendências
                                         </th>
                                     </tr>
