Adding an option for removing members. PART 1

--- a/html/admin.html
+++ b/html/admin.html
@@ -437,6 +437,44 @@
                     </div>
                 </div>
             </div>
+            <div class="col-lg-12 col-md-12 mt-4 mb-4">
+                <div class="card ">
+                    <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
+                        <div class="shadow-dark border-radius-lg pendencies text-dark">
+                            <div class="table-responsive">
+                                <table class="table align-items-center mb-0 border-white border-line"
+                                       data-toggle="tooltip" title="Clique para sanar as suas pendências, caso existam!">
+                                    <thead>
+                                    <tr class="light-silver">
+                                        <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
+                                            Membro
+                                        </th>
+                                        <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
+                                            Opções
+                                        </th>
+                                    </tr>
+                                    </thead>
+                                    <tbody id="tableAllUsers">
+                                    <tr class='pendency-row text-2xl'><td colspan='2'><center>-- SEM MEMBROS --</center></td></tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card-body">
+                        <h6 class="mb-0 "> Todos os membros da equipe </h6>
+                        <hr class="dark horizontal">
+                        <div class="d-flex">
+                            <i class="material-icons text-sm my-auto me-1">info</i>
+                            <p class="mb-0 text-sm"> Cada usuário só pode fazer parte de uma equipe, por vez. </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="material-icons text-sm my-auto me-1">info</i>
+                            <p class="mb-0 text-sm"> Para adicionar um membro removido, basta ele entrar novamente com a chave-convite do projeto. </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <footer class="footer py-4  ">
             <div class="container-fluid">
