--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -467,13 +467,12 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-12 col-md-12 mt-4 mb-4">
+            <div class="col-lg-12 col-md-12 mt-4 mb-4" id="divAllUsers">
                 <div class="card ">
                     <div class="card-header p-0 position-relative mt-n4 mx-3 bg-transparent">
                         <div class="shadow-dark border-radius-lg pendencies text-dark">
                             <div class="table-responsive">
-                                <table class="table align-items-center mb-0 border-white border-line"
-                                       data-toggle="tooltip" title="Clique para sanar as suas pendências, caso existam!">
+                                <table class="table align-items-center mb-0 border-white border-line">
                                     <thead>
                                     <tr class="light-silver">
                                         <th class="text-uppercase text-secondary text-xl font-weight-bolder opacity-7 ps-2">
@@ -485,7 +484,7 @@
                                     </tr>
                                     </thead>
                                     <tbody id="tableAllUsers">
-                                    <tr class='pendency-row text-2xl'><td colspan='2'><center>-- SEM MEMBROS --</center></td></tr>
+                                    <tr class='allUsers-row text-2xl'><td colspan='2'><center>-- SEM MEMBROS --</center></td></tr>
                                     </tbody>
                                 </table>
                             </div>
