Adding an option for removing members. PART 3

--- a/html/admin.html
+++ b/html/admin.html
@@ -469,6 +469,14 @@
                         </div>
                         <div class="d-flex">
                             <i class="material-icons text-sm my-auto me-1">info</i>
+                            <p class="mb-0 text-sm"> Esta funcionalidade apenas remove o vínculo do membro do projeto para que ele possa entrar em outro. </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="material-icons text-sm my-auto me-1">info</i>
+                            <p class="mb-0 text-sm"> Também é necessário remover o membro das decisões do projeto para fazer a remoção completa. Isso deve ser feito manualmente pela equipe. </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="material-icons text-sm my-auto me-1">info</i>
                             <p class="mb-0 text-sm"> Para adicionar um membro removido, basta ele entrar novamente com a chave-convite do projeto. </p>
                         </div>
                     </div>
