--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -507,6 +507,10 @@
                         </div>
                         <div class="d-flex">
                             <i class="material-icons text-sm my-auto me-1">info</i>
+                            <p class="mb-0 text-sm"> O membro removido ainda fará parte do histórico de motivação da equipe. </p>
+                        </div>
+                        <div class="d-flex">
+                            <i class="material-icons text-sm my-auto me-1">info</i>
                             <p class="mb-0 text-sm"> Para adicionar um membro removido, basta ele entrar novamente com a chave-convite do projeto. </p>
                         </div>
                     </div>
