--- a/html/results-admin.html
+++ b/html/results-admin.html
@@ -132,7 +132,7 @@
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"> Os itens considerados BONS PARA SEREM ACEITOS estão em <span class="text-yellow">AMARELO</span> ou <span class="text-green">VERDE</span>. </p>
+                        <p class="mb-0 text-sm"> Os itens considerados BONS PARA SEREM ACEITOS estão em <span class="text-yellow">AMARELO</span> ou <span class="text-green">VERDE</span>, desde que tenham atingido a PONTUAÇÃO MÍNIMA. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
