--- a/html/land-page.html
+++ b/html/land-page.html
@@ -136,7 +136,8 @@
 <script src="/js/material-dashboard.js"></script>
 <script src="/js/jquery.min.js"></script>
 <script src="/js/sweet-alert.js"></script>
-<script src="/js/land-page.js"></script>
+<script src="/js/loadingoverlay.min.js"></script>
+<script src="/js/land-page.js" type="module"></script>
 </body>
 
 </html>
