--- a/html/register-project.html
+++ b/html/register-project.html
@@ -112,7 +112,7 @@
   <script src="/js/notify.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
-  <script src="/js/register-project.js"></script>
+  <script src="/js/register-project.js" type="module"></script>
 </body>
 
 </html>
