--- a/html/about.html
+++ b/html/about.html
@@ -121,10 +121,12 @@
 <script async defer src="/js/buttons.js"></script>
 <!-- Control Center for Material Dashboard: parallax effects, scripts for the example pages etc -->
 <script src="/js/material-dashboard.js"></script>
+<script src="/js/jquery.min.js"></script>
 <script src="/js/flow.js"></script>
 <script src="/js/animated.js"></script>
 <script src="/js/core/bootstrap.bundle.min.js"></script>
-<script src="/js/about.js"></script>
+<script src="/js/loadingoverlay.min.js"></script>
+<script src="/js/about.js" type="module"></script>
 </body>
 
 </html>
