--- a/html/profile.html
+++ b/html/profile.html
@@ -22,7 +22,7 @@
   <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
+<!--  <link rel="manifest" href="/site.webmanifest">-->
   <title>
     MO-DM: Motivation-Oriented Decision-Making
   </title>
@@ -241,7 +241,7 @@
 <script src="/js/zebra_datepicker.src.js"></script>
 <script src="/js/imagesloaded.pkgd.min.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/profile.js"></script>
+<script src="/js/profile.js" type="module"></script>
 </body>
 
 </html>
