--- a/html/results-admin.html
+++ b/html/results-admin.html
@@ -22,7 +22,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="/img/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/img/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/img/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+<!--    <link rel="manifest" href="/site.webmanifest">-->
     <title>
         MO-DM: Motivation-Oriented Decision-Making
     </title>
@@ -260,7 +260,7 @@
 <script src="/js/jinplace.js"></script>
 <script src="/js/loadingoverlay.min.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/results-admin.js"></script>
+<script src="/js/results-admin.js" type="module"></script>
 </body>
 
 </html>
