--- a/html/register-project.html
+++ b/html/register-project.html
@@ -113,6 +113,10 @@
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
   <script src="/js/register-project.js" type="module"></script>
+  <script type="module">
+    import { copyKey } from "/js/register-project.js";
+    window.copyKey = copyKey;
+  </script>
 </body>
 
 </html>
