--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -217,7 +217,7 @@
 <script src="/js/jinplace.js"></script>
 <script src="/js/loadingoverlay.min.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/my-decisions.js" type="module"></script>
+<script src="/js/my-decisions.js"></script>
 </body>
 
 </html>
