--- a/html/profile.html
+++ b/html/profile.html
@@ -241,7 +241,7 @@
 <script src="/js/zebra_datepicker.src.js"></script>
 <script src="/js/imagesloaded.pkgd.min.js"></script>
 <script src="/js/common.js"></script>
-<script src="/js/profile.js" type="module"></script>
+<script src="/js/profile.js"></script>
 </body>
 
 </html>
