--- a/html/register-project.html
+++ b/html/register-project.html
@@ -112,11 +112,7 @@
   <script src="/js/notify.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
-  <script src="/js/register-project.js" type="module"></script>
-  <script type="module">
-    import { copyKey } from "/js/register-project.js";
-    window.copyKey = copyKey;
-  </script>
+  <script src="/js/register-project.js"></script>
 </body>
 
 </html>
