--- a/html/land-page.html
+++ b/html/land-page.html
@@ -137,7 +137,7 @@
 <script src="/js/jquery.min.js"></script>
 <script src="/js/sweet-alert.js"></script>
 <script src="/js/loadingoverlay.min.js"></script>
-<script src="/js/land-page.js" type="module"></script>
+<script src="/js/land-page.js"></script>
 </body>
 
 </html>
