--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -125,7 +125,7 @@
   <script src="/js/jquery.min.js"></script>
   <script src="/js/sweet-alert.js"></script>
   <script src="/js/loadingoverlay.min.js"></script>
-  <script src="/js/sign-up.js" type="module"></script>
+  <script src="/js/sign-up.js"></script>
 </body>
 
 </html>
