--- a/html/land-page.html
+++ b/html/land-page.html
@@ -101,7 +101,7 @@
               © <script>
               document.write(new Date().getFullYear())
             </script> - MO-DM -
-              <a href="#" class="font-weight-bold text-white">Alvaro Magnum</a> | <a href="#" class="font-weight-bold text-white">Cristiano Araújo</a> | <a href="#" class="font-weight-bold text-white">Patrícia Tedesco</a>
+<!--              <a href="#" class="font-weight-bold text-white">Alvaro Magnum</a> | <a href="#" class="font-weight-bold text-white">Cristiano Araújo</a> | <a href="#" class="font-weight-bold text-white">Patrícia Tedesco</a>-->
             </div>
           </div>
           <div class="col-12 col-md-6">
