--- a/html/my-decisions.html
+++ b/html/my-decisions.html
@@ -179,7 +179,7 @@
                                 document.write(new Date().getFullYear())
                             </script>
                             - MO-DM -
-                            <a href="/about" target="_blank" class="font-weight-bold ">Alvaro Magnum</a> | <a href="/about" target="_blank" class="font-weight-bold">Cristiano Araújo</a> | <a href="/about" target="_blank" class="font-weight-bold">Patrícia Tedesco</a>
+<!--                            <a href="/about" target="_blank" class="font-weight-bold ">Alvaro Magnum</a> | <a href="/about" target="_blank" class="font-weight-bold">Cristiano Araújo</a> | <a href="/about" target="_blank" class="font-weight-bold">Patrícia Tedesco</a>-->
                         </div>
                     </div>
                     <div class="col-lg-6">
