--- a/html/sign-up.html
+++ b/html/sign-up.html
@@ -98,6 +98,19 @@
                   </p>
                 </div>
               </div>
+              <div class="copyright text-center text-sm text-muted text-lg-start">
+                <br/>
+                <center>
+                  ©
+                  <script>
+                    document.write(new Date().getFullYear())
+                  </script>
+                  - MO-DM -
+                  <!--                            <a href="/about" target="_blank" class="font-weight-bold ">Alvaro Magnum</a> | <a-->
+                  <!--                                href="/about" target="_blank" class="font-weight-bold">Cristiano Araújo</a> | <a-->
+                  <!--                                href="/about" target="_blank" class="font-weight-bold">Patrícia Tedesco</a>-->
+                </center>
+              </div>
             </div>
           </div>
         </div>
