--- a/html/results.html
+++ b/html/results.html
@@ -240,15 +240,15 @@
                     <br/>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"><span class="text-red">VERMELHO</span> - Impacto <b>negativo</b>. </p>
+                        <p class="mb-0 text-sm"><span class="text-red-ranking">VERMELHO</span> - Impacto <b>negativo</b>. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"><span class="text-yellow">AMARELO</span> - Impacto <b>neutro</b>. </p>
+                        <p class="mb-0 text-sm"><span class="text-yellow-ranking">AMARELO</span> - Impacto <b>neutro</b>. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"><span class="text-green">VERDE</span> - Impacto <b>positivo</b>. </p>
+                        <p class="mb-0 text-sm"><span class="text-green-ranking">VERDE</span> - Impacto <b>positivo</b>. </p>
                     </div>
                 </div>
                 <br/><br/>
