--- a/html/results-admin.html
+++ b/html/results-admin.html
@@ -213,11 +213,11 @@
                     <br/>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"><span class="text-red">VERMELHO</span> - Impacto <b>negativo</b>. </p>
+                        <p class="mb-0 text-sm"><span class="text-red-ranking">VERMELHO</span> - Impacto <b>negativo</b>. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
-                        <p class="mb-0 text-sm"><span class="text-yellow">AMARELO</span> - Impacto <b>neutro</b>. </p>
+                        <p class="mb-0 text-sm"><span class="text-yellow-ranking">AMARELO</span> - Impacto <b>neutro</b>. </p>
                     </div>
                     <div class="d-flex">
                         <i class="material-icons text-sm my-auto me-1">info</i>
