--- a/html/results-admin.html
+++ b/html/results-admin.html
@@ -260,6 +260,7 @@
 <script src="/js/jinplace.js"></script>
 <script src="/js/loadingoverlay.min.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/imagesloaded.pkgd.min.js"></script>
 <script src="/js/results-admin.js"></script>
 </body>
 
