--- a/html/results.html
+++ b/html/results.html
@@ -287,6 +287,7 @@
 <script src="/js/jinplace.js"></script>
 <script src="/js/loadingoverlay.min.js"></script>
 <script src="/js/common.js"></script>
+<script src="/js/imagesloaded.pkgd.min.js"></script>
 <script src="/js/results.js"></script>
 </body>
 
